fix: Nav dropdown cut off on smaller screens

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -67,6 +67,8 @@
         .navbar .dropdown-menu {
             animation: slowExpandUL 0.3s ease-in-out;
             overflow: hidden;
+            left: unset;
+            right: 0;
         }
 
         .navbar {
